--- a/index.css
+++ b/index.css
@@ -584,11 +584,11 @@ a:hover {
   }
 }
 
-@media screen and (max-width: 480px){
+@media screen and (min-width: 320px) and (max-width: 480px){
   #fullName{  
     font-size: 45px; 
-    font-weight: 100;
-    margin-left: 20px;
+    font-weight: bold;
+    margin-left: 10px;
   }
   #secondName{
     font-weight: 100;
@@ -596,19 +596,19 @@ a:hover {
   }
   #subtitle{
     font-size: 15px;  
-    font-weight: lighter; 
-    letter-spacing: 12px;  
+    font-weight: 200; 
+    letter-spacing: 8px;  
     margin: -15px 0px 10px 0px;
-    margin-left: 20px; 
+    margin-left: 10px; 
   }
   #Qualification > #sub1{ 
     font-weight: 100;
     font-size: 15px ;  
     margin: 1% 0% 0% 0%;  
-    margin-left: 20px;  
+    margin-left: 10px;  
   }
   .nav{
-    margin: 150px 0px 0px 20px;  
+    margin: 150px 0px 0px 10px;  
   }
   .nav a{ 
     position: relative;
@@ -621,12 +621,12 @@ a:hover {
     height: 30px;  
   }
   .nav a:hover::before {
-    width: 180px;  
+    width: 140px;  
   }
   .dp{
   width: 200px;
-  height: 350px;  
-  margin: -50% 0% 0% 55%;     
+  height: 370px;  
+  margin: -50% 0% 0% 50%;     
   }
 }
 
@@ -1127,7 +1127,7 @@ a:hover {
     height: 37px;  
   }
   .nav a:hover::before {
-    width: 180px;  
+    width: 280px;  
   }
   .dp{
   width: 500px;
