--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 html{
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 body{
     background-color: black;
@@ -238,6 +239,7 @@ body::-webkit-scrollbar{
 #experiencePage{
     height: 3px;  
     border-radius: 10px; 
+    border: none;
     background-image: linear-gradient(to right, #8A2BE2, #FF1493, #00BFFF); 
     box-shadow: 
     0px 0px 10px #8A2BE2,  
@@ -368,6 +370,7 @@ body::-webkit-scrollbar{
 #projectPage{
     height: 3px;  
     border-radius: 10px; 
+    border: none;
     background-image: linear-gradient(to right, #8A2BE2, #FF1493, #00BFFF); 
     box-shadow: 
     0px 0px 10px #8A2BE2,  
@@ -408,6 +411,7 @@ body::-webkit-scrollbar{
 #bioDataPage{
   height: 3px;  
     border-radius: 10px; 
+    border: none;
     background-image: linear-gradient(to right, #8A2BE2, #FF1493, #00BFFF); 
     box-shadow: 
     0px 0px 10px #8A2BE2,  
@@ -663,7 +667,6 @@ a:hover {
   }
   .logo {
     opacity: 1;
-    animation: slideIn 1s 1.8s forwards;
   }
   #profile span{
     text-shadow: 
@@ -689,6 +692,7 @@ a:hover {
   .logo:hover {
     cursor: pointer;
     transform: scale(1.2) rotate(0deg); /* Slight rotation effect on hover */
+    transition: transform 0.3s ease;    
   }
 #experienceDiv {
     height: 950px;
@@ -893,7 +897,6 @@ a:hover {
   }
   .logo {
     opacity: 1;
-    animation: slideIn 1s 1.8s forwards;
   }
   #profile span{
     animation: slideIn 1s 1.8s forwards;
@@ -1085,7 +1088,6 @@ a:hover {
   }
   .logo {
     opacity: 1;
-    animation: slideIn 1s 1.8s forwards;
   }
   #profile span{
     animation: slideIn 1s 1.8s forwards;
@@ -1277,7 +1279,6 @@ a:hover {
   }
   .logo {
     opacity: 1;
-    animation: slideIn 1s 1.8s forwards;
   }
   #profile span{
     animation: slideIn 1s 1.8s forwards;
@@ -1458,7 +1459,6 @@ a:hover {
   }
   .logo {
     opacity: 1;
-    animation: slideIn 1s 1.8s forwards;
   }
   #profile span{
     animation: slideIn 1s 1.8s forwards;
@@ -1649,7 +1649,6 @@ a:hover {
   }
   .logo {
     opacity: 1;
-    animation: slideIn 1s 1.8s forwards;
   }
   #profile span{
     animation: slideIn 1s 1.8s forwards;
@@ -1855,7 +1854,6 @@ a:hover {
   }
   .logo {
     opacity: 1;
-    animation: slideIn 1s 1.8s forwards;
   }
   #profile span{
     animation: slideIn 1s 1.8s forwards;
@@ -2063,7 +2061,6 @@ a:hover {
   }
   .logo {
     opacity: 1;
-    animation: slideIn 1s 1.8s forwards;
   }
   #profile span{
     animation: slideIn 1s 1.8s forwards;
@@ -2271,7 +2268,6 @@ a:hover {
   }
   .logo {
     opacity: 1;
-    animation: slideIn 1s 1.8s forwards;
   }
   #profile span{
     animation: slideIn 1s 1.8s forwards;
